--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
 
-<button class="w3-button w3-white w3-large" *ngIf="!isSidebarOpen" (click)="w3Open()">&#9776;</button>
+<button class="w3-button w3-white w3-small" *ngIf="!isSidebarOpen" (click)="w3Open()">&#9776;</button>
 
 
-<button class="w3-button w3-white w3-large" *ngIf="isSidebarOpen" (click)="w3Close()">✖</button>
+<button class="w3-button w3-white w3-small" *ngIf="isSidebarOpen" (click)="w3Close()">&#9776;</button>
 
 <!-- <div class="container">
     <aside class="sidebar">
