--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -28,6 +28,9 @@
     <a *ngIf="mostrarTab3===true" (click)="navigateTo('inventario')" class="w3-bar-item w3-button">
       <i class='fas fa-briefcase'></i> &nbsp; Inventario
     </a>
+    <a *ngIf="mostrarTab3===true" (click)="navigateTo('administracion')" class="w3-bar-item w3-button">
+      <i class='fas fa-briefcase'></i> &nbsp; Administracion
+    </a>
   </div>
   
   <div class="w3-container" [class.open]="isSidebarOpen">
