--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -22,7 +22,13 @@
   }
   .carrusel {
     width: 50%;
+    height: 80%;
 
+}
+img {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
 }
 @media (max-width: 760px) {
   .carrusel {
