--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,16 +2,16 @@
  
   
   <div class="carrusel">
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="/src/app/assets/1.1.jpeg" alt="First slide">
+          <img class="d-block w-100"  [src]="image1" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="assets/2.jpeg" alt="Second slide">
+          <img class="d-block w-100"  [src]="image2" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="assets/3.jpeg" alt="Third slide">
+          <img class="d-block w-100"  [src]="image3" alt="Third slide">
         </div>
       </div>
     </div>
