--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,4 @@
+
 .header {
   background: linear-gradient(20deg, #09729f 40%, #ceb62e 60%);
   color: rgb(0, 0, 0);
@@ -9,8 +10,8 @@
 }
   .header ul {
     list-style: none;
-    display: flex;
     gap: 15px;
+    text-align: end;
   }
   .header a {
     color: rgb(0, 0, 0);
