--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,32 @@ html, body {
 ::ng-deep html, body {
     font-family: 'Roboto', sans-serif !important;
 }
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
 
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
+  margin-left: -60px;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
 .h-divider{
     margin-top:5px;
     margin-bottom:5px;
