--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
 html, body { 
     height: 100%; 
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family:'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
