--- a/src/styles.css
+++ b/src/styles.css
@@ -106,3 +106,19 @@ html, body {
         display: inline-block; /* Para que no ocupe todo el ancho */
     }
     
+/*estilos para las tablas se agregan sobre las de material*/
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+  }
+  
+  table, th, td {
+    border: 1px solid #ccc;
+  }
+  
+  th, td {
+    padding: 8px;
+    text-align: left;
+  }
+  
