servicio de reporte sin completar

--- a/src/app/vote/vote.component.css
+++ b/src/app/vote/vote.component.css
@@ -90,5 +90,8 @@ th, td {
   background: linear-gradient(20deg, #09729fcc 40%, #ceb62eb9 60%);
   color: rgb(0, 0, 0);
   padding: 10px 20px;
-
+  border-radius:4px;
+}
+.pdfcontent{
+  border-radius:4px;
 }
