--- a/src/app/administracion/administracion.component.html
+++ b/src/app/administracion/administracion.component.html
@@ -1,5 +1,5 @@
 <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
-    <mat-tab label="Ingreso">
+    <mat-tab label="Login administracion">
         <mat-divider></mat-divider>
 
         <div>
